docs/api/qiskit/0.24/qiskit.aqua.algorithms.QSVM.md
---
title: QSVM
description: API reference for qiskit.aqua.algorithms.QSVM
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.QSVM
---

<span id="qiskit-aqua-algorithms-qsvm" />

# qiskit.aqua.algorithms.QSVM

<span id="qiskit.aqua.algorithms.QSVM" />

`QSVM(feature_map, training_dataset=None, test_dataset=None, datapoints=None, multiclass_extension=None, lambda2=0.001, quantum_instance=None)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/algorithms/classifiers/qsvm/qsvm.py "view source code")

Quantum SVM algorithm.

A key concept in classification methods is that of a kernel. Data cannot typically be separated by a hyperplane in its original space. A common technique used to find such a hyperplane consists on applying a non-linear transformation function to the data. This function is called a *feature map*, as it transforms the raw features, or measurable properties, of the phenomenon or subject under study. Classifying in this new feature space – and, as a matter of fact, also in any other space, including the raw original one – is nothing more than seeing how close data points are to each other. This is the same as computing the inner product for each pair of data in the set. In fact we do not need to compute the non-linear feature map for each datum, but only the inner product of each pair of data points in the new feature space. This collection of inner products is called the **kernel** and it is perfectly possible to have feature maps that are hard to compute but whose kernels are not.

The QSVM algorithm applies to classification problems that require a feature map for which computing the kernel is not efficient classically. This means that the required computational resources are expected to scale exponentially with the size of the problem. QSVM uses a Quantum processor to solve this problem by a direct estimation of the kernel in the feature space. The method used falls in the category of what is called **supervised learning**, consisting of a **training phase** (where the kernel is calculated and the support vectors obtained) and a **test or classification phase** (where new data without labels is classified according to the solution found in the training phase).

Internally, QSVM will run the binary classification or multiclass classification based on how many classes the data has. If the data has more than 2 classes then a *multiclass\_extension* is required to be supplied. Aqua provides several [`multiclass_extensions`](qiskit.aqua.components.multiclass_extensions#module-qiskit.aqua.components.multiclass_extensions "qiskit.aqua.components.multiclass_extensions").

See also [https://arxiv.org/abs/1804.11326](https://arxiv.org/abs/1804.11326)

**Parameters**

*   **feature\_map** (`Union`\[`QuantumCircuit`, `FeatureMap`]) – Feature map module, used to transform data
*   **training\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Training dataset.
*   **test\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Testing dataset.
*   **datapoints** (`Optional`\[`ndarray`]) – Prediction dataset.
*   **multiclass\_extension** (`Optional`\[`MulticlassExtension`]) – If number of classes is greater than 2 then a multiclass scheme must be supplied, in the form of a multiclass extension.
*   **lambda2** (`float`) – L2 norm regularization factor
*   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – Quantum Instance or Backend

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Multiclass extension not supplied when number of classes > 2

### \_\_init\_\_

<span id="qiskit.aqua.algorithms.QSVM.__init__" />

`__init__(feature_map, training_dataset=None, test_dataset=None, datapoints=None, multiclass_extension=None, lambda2=0.001, quantum_instance=None)`

**Parameters**

*   **feature\_map** (`Union`\[`QuantumCircuit`, `FeatureMap`]) – Feature map module, used to transform data
*   **training\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Training dataset.
*   **test\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Testing dataset.
*   **datapoints** (`Optional`\[`ndarray`]) – Prediction dataset.
*   **multiclass\_extension** (`Optional`\[`MulticlassExtension`]) – If number of classes is greater than 2 then a multiclass scheme must be supplied, in the form of a multiclass extension.
*   **lambda2** (`float`) – L2 norm regularization factor
*   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – Quantum Instance or Backend

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Multiclass extension not supplied when number of classes > 2

## Methods

|                                                                                                                                                                 |                                                                              |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
| [`__init__`](#qiskit.aqua.algorithms.QSVM.__init__ "qiskit.aqua.algorithms.QSVM.__init__")(feature\_map\[, training\_dataset, …])                               | **type feature\_map**`Union`\[`QuantumCircuit`, `FeatureMap`]                |
| [`construct_circuit`](#qiskit.aqua.algorithms.QSVM.construct_circuit "qiskit.aqua.algorithms.QSVM.construct_circuit")(x1, x2\[, measurement])                   | Generate inner product of x1 and x2 with the given feature map.              |
| [`construct_kernel_matrix`](#qiskit.aqua.algorithms.QSVM.construct_kernel_matrix "qiskit.aqua.algorithms.QSVM.construct_kernel_matrix")(x1\_vec\[, x2\_vec, …]) | Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted. |
| [`get_kernel_matrix`](#qiskit.aqua.algorithms.QSVM.get_kernel_matrix "qiskit.aqua.algorithms.QSVM.get_kernel_matrix")(quantum\_instance, …\[, …])               | Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted. |
| [`load_model`](#qiskit.aqua.algorithms.QSVM.load_model "qiskit.aqua.algorithms.QSVM.load_model")(file\_path)                                                    | Load a model from a file path.                                               |
| [`predict`](#qiskit.aqua.algorithms.QSVM.predict "qiskit.aqua.algorithms.QSVM.predict")(data\[, quantum\_instance])                                             | Predict using the svm.                                                       |
| [`run`](#qiskit.aqua.algorithms.QSVM.run "qiskit.aqua.algorithms.QSVM.run")(\[quantum\_instance])                                                               | Execute the algorithm with selected backend.                                 |
| [`save_model`](#qiskit.aqua.algorithms.QSVM.save_model "qiskit.aqua.algorithms.QSVM.save_model")(file\_path)                                                    | Save the model to a file path.                                               |
| [`set_backend`](#qiskit.aqua.algorithms.QSVM.set_backend "qiskit.aqua.algorithms.QSVM.set_backend")(backend, \*\*kwargs)                                        | Sets backend with configuration.                                             |
| [`setup_datapoint`](#qiskit.aqua.algorithms.QSVM.setup_datapoint "qiskit.aqua.algorithms.QSVM.setup_datapoint")(datapoints)                                     | Setup data points, if the data were there, they would be overwritten.        |
| [`setup_test_data`](#qiskit.aqua.algorithms.QSVM.setup_test_data "qiskit.aqua.algorithms.QSVM.setup_test_data")(test\_dataset)                                  | Setup test data, if the data were there, they would be overwritten.          |
| [`setup_training_data`](#qiskit.aqua.algorithms.QSVM.setup_training_data "qiskit.aqua.algorithms.QSVM.setup_training_data")(training\_dataset)                  | Setup training data, if the data were there, they would be overwritten.      |
| [`test`](#qiskit.aqua.algorithms.QSVM.test "qiskit.aqua.algorithms.QSVM.test")(data, labels\[, quantum\_instance])                                              | Test the svm.                                                                |
| [`train`](#qiskit.aqua.algorithms.QSVM.train "qiskit.aqua.algorithms.QSVM.train")(data, labels\[, quantum\_instance])                                           | Train the svm.                                                               |

## Attributes

|                                                                                                                    |                           |
| ------------------------------------------------------------------------------------------------------------------ | ------------------------- |
| `BATCH_SIZE`                                                                                                       |                           |
| [`backend`](#qiskit.aqua.algorithms.QSVM.backend "qiskit.aqua.algorithms.QSVM.backend")                            | Returns backend.          |
| [`quantum_instance`](#qiskit.aqua.algorithms.QSVM.quantum_instance "qiskit.aqua.algorithms.QSVM.quantum_instance") | Returns quantum instance. |
| [`random`](#qiskit.aqua.algorithms.QSVM.random "qiskit.aqua.algorithms.QSVM.random")                               | Return a numpy random.    |
| [`ret`](#qiskit.aqua.algorithms.QSVM.ret "qiskit.aqua.algorithms.QSVM.ret")                                        | returns result            |

### backend

<span id="qiskit.aqua.algorithms.QSVM.backend" />

`property backend`

Returns backend.

**Return type**

`Union`\[`Backend`, `BaseBackend`]

### construct\_circuit

<span id="qiskit.aqua.algorithms.QSVM.construct_circuit" />

`construct_circuit(x1, x2, measurement=False)`

Generate inner product of x1 and x2 with the given feature map.

The dimension of x1 and x2 must be the same.

**Parameters**

*   **x1** (*numpy.ndarray*) – data points, 1-D array, dimension is D
*   **x2** (*numpy.ndarray*) – data points, 1-D array, dimension is D
*   **measurement** (*bool*) – add measurement gates at the end

**Returns**

constructed circuit

**Return type**

[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

### construct\_kernel\_matrix

<span id="qiskit.aqua.algorithms.QSVM.construct_kernel_matrix" />

`construct_kernel_matrix(x1_vec, x2_vec=None, quantum_instance=None)`

Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted.

**Notes**

When using statevector\_simulator, we only build the circuits for Psi(x1)|0> rather than Psi(x2)^dagger Psi(x1)|0>, and then we perform the inner product classically. That is, for statevector\_simulator, the total number of circuits will be O(N) rather than O(N^2) for qasm\_simulator.

**Parameters**

*   **x1\_vec** (*numpy.ndarray*) – data points, 2-D array, N1xD, where N1 is the number of data, D is the feature dimension
*   **x2\_vec** (*numpy.ndarray*) – data points, 2-D array, N2xD, where N2 is the number of data, D is the feature dimension
*   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all settings

**Returns**

2-D matrix, N1xN2

**Return type**

numpy.ndarray

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.

### get\_kernel\_matrix

<span id="qiskit.aqua.algorithms.QSVM.get_kernel_matrix" />

`static get_kernel_matrix(quantum_instance, feature_map, x1_vec, x2_vec=None, enforce_psd=True)`

Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted.

**Notes**

When using statevector\_simulator, we only build the circuits for Psi(x1)|0> rather than Psi(x2)^dagger Psi(x1)|0>, and then we perform the inner product classically. That is, for statevector\_simulator, the total number of circuits will be O(N) rather than O(N^2) for qasm\_simulator.

**Parameters**

*   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all settings
*   **feature\_map** ([*FeatureMap*](qiskit.aqua.components.feature_maps.FeatureMap "qiskit.aqua.components.feature_maps.FeatureMap")) – a feature map that maps data to feature space
*   **x1\_vec** (*numpy.ndarray*) – data points, 2-D array, N1xD, where N1 is the number of data, D is the feature dimension
*   **x2\_vec** (*numpy.ndarray*) – data points, 2-D array, N2xD, where N2 is the number of data, D is the feature dimension
*   **enforce\_psd** (*bool*) – enforces that the kernel matrix is positive semi-definite by setting negative eigenvalues to zero. This is only applied in the symmetric case, i.e., if x2\_vec == None.

**Returns**

2-D matrix, N1xN2

**Return type**

numpy.ndarray

### load\_model

<span id="qiskit.aqua.algorithms.QSVM.load_model" />

`load_model(file_path)`

Load a model from a file path.

**Parameters**

**file\_path** (*str*) – the path of the saved model.

### predict

<span id="qiskit.aqua.algorithms.QSVM.predict" />

`predict(data, quantum_instance=None)`

Predict using the svm.

**Parameters**

*   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
*   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

**Returns**

predicted labels, Nx1 array

**Return type**

numpy.ndarray

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.

### quantum\_instance

<span id="qiskit.aqua.algorithms.QSVM.quantum_instance" />

`property quantum_instance`

Returns quantum instance.

**Return type**

`Optional`\[`QuantumInstance`]

### random

<span id="qiskit.aqua.algorithms.QSVM.random" />

`property random`

Return a numpy random.

### ret

<span id="qiskit.aqua.algorithms.QSVM.ret" />

`property ret`

returns result

### run

<span id="qiskit.aqua.algorithms.QSVM.run" />

`run(quantum_instance=None, **kwargs)`

Execute the algorithm with selected backend.

**Parameters**

*   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – the experimental setting.
*   **kwargs** (*dict*) – kwargs

**Returns**

results of an algorithm.

**Return type**

dict

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided

### save\_model

<span id="qiskit.aqua.algorithms.QSVM.save_model" />

`save_model(file_path)`

Save the model to a file path.

**Parameters**

**file\_path** (*str*) – a path to save the model.

### set\_backend

<span id="qiskit.aqua.algorithms.QSVM.set_backend" />

`set_backend(backend, **kwargs)`

Sets backend with configuration.

**Return type**

`None`

### setup\_datapoint

<span id="qiskit.aqua.algorithms.QSVM.setup_datapoint" />

`setup_datapoint(datapoints)`

Setup data points, if the data were there, they would be overwritten.

**Parameters**

**datapoints** (*numpy.ndarray*) – prediction dataset.

### setup\_test\_data

<span id="qiskit.aqua.algorithms.QSVM.setup_test_data" />

`setup_test_data(test_dataset)`

Setup test data, if the data were there, they would be overwritten.

**Parameters**

**test\_dataset** (*dict*) – test dataset.

### setup\_training\_data

<span id="qiskit.aqua.algorithms.QSVM.setup_training_data" />

`setup_training_data(training_dataset)`

Setup training data, if the data were there, they would be overwritten.

**Parameters**

**training\_dataset** (*dict*) – training dataset.

### test

<span id="qiskit.aqua.algorithms.QSVM.test" />

`test(data, labels, quantum_instance=None)`

Test the svm.

**Parameters**

*   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
*   **labels** (*numpy.ndarray*) – Nx1 array, where N is the number of data
*   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

**Returns**

accuracy

**Return type**

float

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.

### train

<span id="qiskit.aqua.algorithms.QSVM.train" />

`train(data, labels, quantum_instance=None)`

Train the svm.

**Parameters**

*   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
*   **labels** (*numpy.ndarray*) – Nx1 array, where N is the number of data
*   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.

